* type=address-/addressgroup-/service-/servicegroup-/tag-merger | extend with in=sase-api:// support
* in=sase-api:// - Strate Cloud Manager | extend reading objects based on type=
* type=rule | actions=display/exporttoexcel - extend additional argument ResolveAddressSummary with name/ip value from nested members

BUGFIX:
* class Zone.php | bugfix to create XML node "zone" if not yet available during creating of a new Zone
* type=address-merger | bugfix if overwritten object has not same value
* type=vendor-migration | bugfix for wildcard 0.0.0.0 - do not replace leading 0
* type=tag in=sase-api:// | bugfix to handle tag color information correctly
* type=address actions=move:DGNAME | bugfix if same object name is available on upperlevel
* type=rule actions=exporttoexcel:FILE.html,resolveAddresssummary | bugfix correction of 0.0.0.0/24 to 0.0.0.0/0

GENERAL:
* develop - start sase.php _ first version to use sase-api
* develop sase.xml | check also post rulebase
* introduce a new connection method "in=sase-api://"
* general | introduce argument shadow-saseapiqa for in=sase-api://


2.1.8 (20230614)
UTIL:
* type=addressgroup-/servicegroup-merger - add additional output reason if groups can not be merged
* type=userid-mgr | correct usage of objectsLocation variable
* type=rule ruletype=nat | introduce 'actions=SNAT-set-interface:INTERFACE-NAME'
* type=dhcp | introduce 'actions=dhcp-server-reservation-create:IP,mac'
* type=service actions=name-charachter-replace:SEARCH,REPLACE - new default REPLACE value is ''
* type=service 'filter=(name regex /ARGUMENTS/) - introduce variables same way as type=address 'filter=(name regex //)-  'possible variables to bring in as argument: $$current.name$$ / $$protocol$$ / $$destinationport$$ / $$soruceport$$ / $$timeout$$'
* type=service | introduce actions=timeout-halfclose-set/timeout-timewait-set & filter=(timeout-halfclose is.set/timeout-timewait is.set / timeout-halfclose.value <>=! / timeout-timewait.value >,<,=,!