@@ -10,6 +10,7 @@ UTIL:
 * type=address-/addressgroup-/service-/servicegroup-/tag-merger | extend with in=sase-api:// support
 * in=sase-api:// - Strate Cloud Manager | extend reading objects based on type=
 * type=rule | actions=display/exporttoexcel - extend additional argument ResolveAddressSummary with name/ip value from nested members
+* type=xml-issue  | extend check with secRule category field for ANY + other category configured
 
 BUGFIX:
 * class Zone.php | bugfix to create XML node "zone" if not yet available during creating of a new Zone
